environments/dev/apps/app-web/services/web/base/config/100-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: web
    app.kubernetes.io/part-of: app-web
  name: web
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: web
      app.kubernetes.io/part-of: app-web
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: web
        app.kubernetes.io/part-of: app-web
    spec:
      containers:
      - image: nginxinc/nginx-unprivileged:latest
        imagePullPolicy: Always
        name: web
        ports:
        - containerPort: 8080
        resources: {}
      serviceAccountName: default
status: {}
