environments/dev/apps/app-web/services/web/base/config/200-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: web
    app.kubernetes.io/part-of: app-web
  name: web
  namespace: dev
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: web
    app.kubernetes.io/part-of: app-web
status:
  loadBalancer: {}
