environments/dev/apps/app-web/services/web/base/config/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: web
  namespace: dev
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: web
    weight: 100
  wildcardPolicy: None
